Fixed jumping navbar when toggle dropdown on mobile display

--- a/app/assets/stylesheets/src/shared/_navbar.scss
+++ b/app/assets/stylesheets/src/shared/_navbar.scss
@@ -22,3 +22,8 @@ body {
     transform: none;
   }
 }
+
+nav.header .navbar-toggler {
+  margin-top: 8px;
+  margin-bottom: 8px;
+}
